...
    <string name="admin_page_vm_saved_successfully">Saved successfully!</string>

    <!-- SignInScreen -->
    <string name="app_name">MySwissDorm</string>
    <string name="login_in_text">Log In</string>
    <string name="create_account_text">Don\'t have an account? Sign up !</string>
    <string name="continue_as_guest">Continue as guest</string>

    <!-- SignInViewModel -->
    <string name="sign_in_not_registered">This account is not registered</string>
    <string name="sign_in_auth_cancelled">Authentification cancelled</string>
    <string name="sign_in_failed_to_get_credentials">Failed to get credentials</string>
    <string name="sign_in_guest_login_failed">Guest login failed</string>
...
    <!-- BrowseCityViewModel -->
    <string name="browse_city_vm_failed_to_load_listings">Failed to load listings</string>
    <string name="browse_city_vm_failed_to_load_residencies">Failed to load listings</string>
    <string name="browse_city_vm_price_per_month">.-/month</string>
    <!-- EditPreferencesScreen -->
    <string name="listing_preferences">Preferences</string>
    <string name="save_preferences">Save Preferences</string>

    <!-- BookmarkedListingsScreen -->
    <string name="bookmarked_listings_title">Bookmarked Listings</string>
    <string name="bookmarked_listings_no_bookmarks_yet">No bookmarked listings yet.</string>
    <string name="bookmarked_listings_failed_to_load">Failed to load bookmarked listings</string>
    <string name="bookmarked_listings_no_image">No image</string>
...
