...
import com.android.mySwissDorm.ui.utils.onUserLocationClickFunc

/** Test tags for the Home Page screen, used for UI testing. */
object HomePageScreenTestTags {
  const val SEARCH_BAR = "searchBar"
  const val SEARCH_BAR_TEXT_FIELD = "searchBarTextField"
  const val CITIES_LIST = "citiesList"
  const val LOCATION_SELECTION = "homePageLocationSelection"

  fun getTestTagForCityCard(cityName: String): String = "cityCard${cityName}"

  fun getTestTagForCityCardTitle(cityName: String): String = "cityCardTitle${cityName}"

...
